<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    app:layout_anchorGravity="center">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002">

        <TextView
            android:id="@+id/telegram_group_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_light"
            android:text="@string/telegram_text"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/telegram_group_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/telegram_message"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <ImageButton
            android:id="@+id/telegramButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="#00000000"
            android:contentDescription="@string/telegram_button"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/telegram_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.39">

        <ImageView
            android:id="@+id/urv_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/urv_logo_desc"
            android:foregroundGravity="center"
            android:textAlignment="gravity"
            app:srcCompat="@drawable/logo_urv" />

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/soundless_logo_desc"
            android:src="@drawable/logo_soundless" />

    </LinearLayout>

    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_sans_bold"
        android:text="@string/project_title"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/project_footer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:text="@string/project_footer"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_title"
        app:layout_constraintVertical_bias="0.050000012" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/cancel"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

</androidx.constraintlayout.widget.ConstraintLayout>