<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    app:layout_anchorGravity="center">

    <TextView
        android:id="@+id/project_desc"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:text="@string/project_desc"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <ImageView
        android:id="@+id/urv_logo"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:contentDescription="@string/urv_logo_desc"
        android:foregroundGravity="center"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_desc"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/logo_urv" />

    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_sans_bold"
        android:text="@string/project_title"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urv_logo"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/project_footer"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:text="@string/project_footer"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_title"
        app:layout_constraintVertical_bias="0.028" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_footer"
        app:layout_constraintVertical_bias="0.39">

        <TextView
            android:id="@+id/telegram_group_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_light"
            android:text="@string/telegram_text"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/telegramButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="#00000000"
            android:contentDescription="@string/telegram_button"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/telegram_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>